# checker

./: Cargo.toml  package-lock.json  package.json  tailwind.config.js
.github/workflows/: deploy.yaml
app/: Cargo.toml
app/src/: lib.rs
app/src/components/player/: mod.rs  player_assignment.rs  player_assignment_server_functiony.rs  player_information.rs  use_player_assingment.rs
app/src/pages/: app_router.rs  game_page.rs  landing_page.rs  mod.rs  new_game_page.rs
app/src/utils/: mod.rs  use_cookie_signal.rs
server/: Cargo.toml
server/src/: fileserv.rs  main.rs
