[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
wasm-bindgen = "0.2"

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
thaw = { version = "0.3.4" }
leptos-use = { version="0.13.6", features = [
    "use_permission",
    "use_clipboard",
]}

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "thaw/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum", "thaw/ssr", "leptos-use/ssr"]

[dependencies.uuid]
version = "1.11.0"
features = [
    "v7",                # Lets you generate random UUIDs
    "serde",             # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "js",                # For webassembly
]

[dependencies.web-sys]
version = "0.3"
features = [
    "Clipboard",
    "Navigator",
    "Location",
]
